增加文章目录

--- a/themes/gandalfr/layout/mixins/post.jade
+++ b/themes/gandalfr/layout/mixins/post.jade
@@ -54,5 +54,8 @@ mixin post(item)
                         a.tag-title(href=url_for(tag.path))
                             != '#' + tag.name
             +postInfo(item)
+            if item.toc
+              include toc
+              +toc(item)
             .post-content
                 != item.content
