--- a/themes/gandalfr/layout/mixins/toc.jade
+++ b/themes/gandalfr/layout/mixins/toc.jade
@@ -14,3 +14,7 @@ mixin toc(page)
         content: '#';
         color: #42b983
     }
+    .toc, .toc-child {
+        list-style: none;
+        padding-left: 20px;
+    }
