--- a/themes/gandalfr/layout/partial/comment.jade
+++ b/themes/gandalfr/layout/partial/comment.jade
@@ -27,7 +27,7 @@ if theme.disqus
     script(id='dsq-count-scr' src='//#{theme.disqus}.disqus.com/count.js' async)
 
 if theme.livere
-    #lv-container(data-id='city', data-uid='MTAyMC8zNDQzMi8xMDk2OQ==')
+    #lv-container(data-id='city', data-uid=theme.livere)
     script.
         (function(d, s) {
             var j, e = d.getElementsByTagName(s)[0];
